@@ -1,8 +1,8 @@
 Bundle: VR
 Priority: recommended
 Contains: MASS class nnet spatial
-Version: 7.2-41
-Date: 2008-02-16
+Version: 7.2-42
+Date: 2008-05-05
 Depends: R (>= 2.4.0), grDevices, graphics, stats, utils
 Suggests: lattice, nlme, survival
 Author: S original by Venables & Ripley.
@@ -13,4 +13,4 @@ BundleDescription: Functions and datasets to support Venables and
   Ripley, 'Modern Applied Statistics with S' (4th edition).
 License: GPL-2 | GPL-3
 URL: http://www.stats.ox.ac.uk/pub/MASS4/
-Packaged: Sun Feb 17 12:24:00 2008; ripley
+Packaged: Mon May  5 06:06:09 2008; ripley
